# Desktop2fa

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_error.rs  lib.rs  main.rs  models.rs  secure_store.rs  totp_logic.rs
src/components/: TotpRow.test.tsx  TotpRow.tsx  WidgetShell.tsx
src/features/settings/: AccountEditorWindow.test.tsx  AccountEditorWindow.tsx  SettingsListWindow.test.tsx  SettingsListWindow.tsx
src/lib/: api.ts
tmp/: icon-prompts.jsonl
