[package]
name = "desktop2fa"
version = "0.1.0"
description = "A compact TOTP desktop widget built with Tauri"
authors = ["Erik Pope"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop2fa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.2"
tauri-plugin-window-state = "2.4.1"
aes-gcm-siv = "0.11.1"
rand = "0.8.5"
hmac = "0.12.1"
sha1 = "0.10.6"
sha2 = "0.10.9"
url = "2.5.8"
urlencoding = "2.1.3"
data-encoding = "2.10.0"
arboard = "3.6.1"
thiserror = "2.0.18"
